// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ListChoice Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Some description about this type of ListChoice in general.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 btWrZR"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 fixYk"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dWFgIW"
                  >
                    Further description
                  </p>
                </div>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        ListChoice
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Choice Title
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            description
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Further description
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Accommodation /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onClick
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListChoice Multiple choices 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Multiple choices
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Some description about this type of ListChoice in general.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 btWrZR"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 fixYk"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dWFgIW"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={false}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 btWrZR"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 fixYk"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dWFgIW"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={true}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 btWrZR"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 fixYk"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dWFgIW"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={false}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Unknown
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ListChoice
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              title
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Choice Title
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              description
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Further description
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              selectable
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Accommodation /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onClick
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ListChoice
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              title
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Choice Title
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              description
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Further description
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              selectable
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              selected
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Accommodation /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onClick
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ListChoice
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              title
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Choice Title
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              description
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Further description
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              selectable
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Accommodation /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onClick
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          Unknown
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListChoice Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Some description about this type of InputField in general.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                data-test="test"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 btWrZR"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 fixYk"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dWFgIW"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={false}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        ListChoice
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Choice Title
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            description
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Further description
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            selectable
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            selected
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Accommodation /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onClick
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ListChoice RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Some description about this type of ListChoice.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 kIlQgM"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 iNARFK"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dewkRf"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={false}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 kIlQgM"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 iNARFK"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dewkRf"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={true}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                className="ListChoice__StyledListChoice-sc-1y53xes-1 VRpHx"
                onClick={[Function]}
              >
                <div
                  className="ListChoice__StyledListChoiceIcon-sc-1y53xes-0 kIlQgM"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 7h-8v7H3V5H1v15h2v-3h18v3h2v-9a4 4 0 0 0-4-4zM7 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
                    />
                  </svg>
                </div>
                <div
                  className="ListChoice__StyledListChoiceContent-sc-1y53xes-2 iNARFK"
                >
                  <h1
                    className="Heading__StyledHeading-sc-1b8cso5-0 gORNFi"
                  >
                    Choice Title
                  </h1>
                  <p
                    className="Text__StyledText-sc-19qtt4y-0 dewkRf"
                  >
                    Further description
                  </p>
                </div>
                <label
                  className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                >
                  <input
                    checked={false}
                    className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                    disabled={false}
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                  >
                    <svg
                      className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                      />
                    </svg>
                  </div>
                </label>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            Unknown
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            ListChoice
                          </span>
                          <span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                title
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Choice Title
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                description
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Further description
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                selectable
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                icon
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    &lt;Accommodation /&gt;
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                onClick
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#170",
                                      }
                                    }
                                  >
                                    onClick
                                  </span>
                                  }
                                </span>
                              </span>
                              <br />
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            /&gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            ListChoice
                          </span>
                          <span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                title
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Choice Title
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                description
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Further description
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                selectable
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                selected
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                icon
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    &lt;Accommodation /&gt;
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                onClick
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#170",
                                      }
                                    }
                                  >
                                    onClick
                                  </span>
                                  }
                                </span>
                              </span>
                              <br />
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            /&gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            ListChoice
                          </span>
                          <span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                title
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Choice Title
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                description
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    Further description
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                selectable
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                icon
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    &lt;Accommodation /&gt;
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            <span>
                              <span>
                                <br />
                                  
                              </span>
                              <span
                                style={Object {}}
                              >
                                onClick
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#170",
                                      }
                                    }
                                  >
                                    onClick
                                  </span>
                                  }
                                </span>
                              </span>
                              <br />
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            /&gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;/
                            Unknown
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
